crates/swc_ecma_parser/tests/test262-error-references/fail/f4467d719dcee086.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/f4467d719dcee086.js:2:1
  |
2 | *a}
  | ^

